<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>URDF description of a custom mobile robot with LiDAR and two cameras</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- URDF / Xacro processing -->
  <exec_depend>xacro</exec_depend>

  <!-- Visualisation -->
  <exec_depend>rviz2</exec_depend>

  <!-- Simulation -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- FIX: added all dependencies actually used in src/ and launch/ -->

  <!-- Sensor fusion / localization -->
  <exec_depend>robot_localization</exec_depend>

  <!-- TF -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- ROS message types -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Python runtime -->
  <exec_depend>rclpy</exec_depend>

  <!-- Camera / vision fusion -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_opencv</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- LiDAR → PointCloud2 conversion -->
  <exec_depend>laser_geometry</exec_depend>

  <!-- Python PointCloud2 read/write helpers -->
  <exec_depend>sensor_msgs_py</exec_depend>

  <!-- message_filters (ApproximateTimeSynchronizer used in fusion_node.py) -->
  <exec_depend>message_filters</exec_depend>

  <!-- numpy (used by kalman.py, odom_kalman.py) -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
